2004-03-20  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* screenshots/vectorbuttons/index.php: 
	added vectorbutton page

2004-03-19  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* web-theme/classes/default_class.inc: 
	* web-theme/classes/pager_on_top_class.inc: 
	changed link_pic to link_picture

	* customize_theme/index.php: 
	disabled option for each theme - too buggy :-\

	* screenshots/windowdecors/index.php: 
	* screenshots/desktops/index.php: 
	* screenshots/menus/index.php:
	added short_link definition

	* navgen.cli: 
	made script more generic, empty variables will be not exported,
	export now short_name as well

2004-03-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated

	* definitions.inc:
	updated for 2.5.10
	updated for 2.4.18

2004-03-19  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* screenshots/desktops/Nuno_Alexandre-1600x1200/*:
	added screenshot

	* layout_plain.inc:
	* layout_default.inc:
	removed old layout file

	* documentation/manpages/manpages2php:
	* documentation/perllib/perllib2php:
	removed background settings

	* black-stone1.jpg:
	* fvwm-logo.gif:
	* fvwm_smaller.gif:
	* fvwm.gif:
	removed old unused files

	* web-theme/*/blue*:
	* css/blue.css:
	cleaned up color settings - more is needed

2004-03-04  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* screenshots/menus/Scott_Smedley/*:
	Added menu screenshots

2004-03-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated

	* regenerate_pages:
	fixed gawk install path problem

	* definitions.inc:
	updated for 2.5.9

2004-02-29  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* screenshots/menus/*:
	new generic menu screenshot page

2004-02-20  Mikhael Goikhman  <migo@homemail.com>

	* contact/index.php:
	replace Google search form: no table needed, don't use German Google,