@@ -39,6 +39,11 @@ if( strlen("$site_has_been_loaded") == 0 ) {
 
 <?php decoration_window_start("FVWM Vectorbuttons"); ?>
 
+FVWM provides a variety of ways to decorate the buttons in  the  title
+bar.  Vector  buttons  are  images  drawn using the buttons shadow and
+highlight colors. This page shows some of the vector buttons that have
+been contributed to the project. 
+
 <table summary="">
 <?php include(sec_filename("vectorbuttonlist.inc")); ?>
 </table>
