@@ -1,3 +1,9 @@
+2004-03-21  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>
+
+	* web-theme/classes/pager_on_top_class.inc: 
+	changed page algo so that a desktop enlargement is done if is it
+	really needed only
+
 2004-03-20  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>
 
 	* screenshots/vectorbuttons/index.php: 
